deployment/helm/mysql/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - name: mysql-primary
      port: 3306
      targetPort: 3306
    - name: mysql-secondary
      port: 3307
      targetPort: 3307
