deployment/helm/mysql/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mysql-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 3306
      name: mysql-primary
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-vs
spec:
  hosts:
  - "*"
  gateways:
  - mysql-gateway
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: mysql-primary-headless.default.svc.cluster.local
        port:
          number: 3306
